[metadata]
name = box
version = 0.1
author = Barney Gale
author-email = barney.gale@gmail.com
home-page = https://github.com/barneygale/box
description = Lightweight virtualenv orchestration
long-description = file: README.rst
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
py_modules = box
install_requires = nox

[bdist_wheel]
universal = true